# mpv-winbuild-cmake

./: CMakeLists.txt  meson_cross.txt.in  toolchain.cmake.in
cmake/: packages_check.cmake  toolchain_check.cmake
toolchain/: ccache.cmake  glslc-host.cmake  libxml2-host.cmake  mimalloc-host.cmake  ninja.cmake  rustup.cmake  zlib-host.cmake  zstd-host.cmake
toolchain/llvm/: llvm-bolt.cmake  llvm-compiler.in  llvm-cuda-compiler.in  llvm-custom-VecFuncs-changes-avx512.patch  llvm-custom-VecFuncs-changes.patch  llvm-ld.in  llvm-libc.cmake  llvm-wrapper.cmake  llvm.cmake
utils/: pgo-use.sh  setup_aarch64.sh
